--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!doctype html>
-<html class="no-js" lang="">
+<html class="no-js" lang="es">
 
 <head>
   <meta charset="utf-8">
   <title></title>
-  <meta name="description" content="">
+  <meta name="description" content="Talentos TvAzteca">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <meta property="og:title" content="">
@@ -75,6 +75,58 @@
   </header>
 
   <div class="contenedor">
+
+    <section class="seccion_carrusel">
+      <div class="fila">
+        <div class="elem bkg-negr0">
+          <svg style="transform: scaleX(1.43) scaleY(1.2);" viewBox="0 0 50 33.85">
+            <polygon points="41.8,33.8 0,33.8 0,0 50,0 "/>
+          </svg>
+          <div class="cont-c">
+            <div class="tit-c">Kristal Silva</div>
+            <div class="det-c">
+              <span>-</span>
+              <div>influencer</div>
+              <div>actriz</div>
+              <div>modelo</div>
+              <span>-</span>
+            </div>
+            <div class="red-c">
+              <i class="fab fa-facebook-square"></i>
+              <i class="fab fa-twitter-square"></i>
+              <i class="fab fa-youtube-square"></i>
+              <i class="fab fa-instagram-square"></i>
+              <i class="fab fa-linkedin"></i>
+              <i class="fab fa-pinterest-square"></i>
+              <i class="fab fa-vimeo"></i>
+              <i class="fab fa-snapchat-square"></i>
+            </div>
+            <button class="btn-c mt-10">Ver más</button>
+          </div>
+
+        </div>
+        <div class="elem bkg-blanco">
+
+        </div>
+      </div>
+    </section>
+
+    <section class="seccion_imagenes">
+      <div class="cont-elems m-general">
+        <div class="elem-4">
+          <div class="tarjeta">
+            
+          </div>
+        </div>
+        
+      </div>
+
+    </section>
+
+    <section class="seccion_contacto">
+
+
+    </section>
 
 
   </div>
