--- a/index.html
+++ b/index.html
@@ -105,17 +105,66 @@
           </div>
 
         </div>
-        <div class="elem bkg-blanco">
-
+        <div class="bkg-blanco elem-c-img">
+            <img src="./img/img1.JPG" alt="">
         </div>
       </div>
     </section>
 
     <section class="seccion_imagenes">
+      <div class="tit-sec">
+        Talentos
+      </div>
       <div class="cont-elems m-general">
         <div class="elem-4">
-          <div class="tarjeta">
-            
+          <div class="img-talento">
+            <img src="./img/g_img1.JPG" alt="">
+          </div>
+        </div>
+        <div class="elem-4">
+          <div class="img-talento">
+            <img src="./img/modelo.JPG" alt="">
+            <div class="back-talento">
+              <div class="txt-tal-tit">Kristal Silva</div>
+              <div class="txt-tal-qes">Actriz</div>
+              <div>
+                <div class="back-redes fab fa-facebook-square"> <div>100K</div></div>
+                <div class="back-redes fab fa-twitter-square"><div>60K</div></div>
+                <div class="back-redes fab fa-youtube-square"><div>230K</div></div>
+                <div class="back-redes fab fa-instagram-square"><div>110K</div></div>
+              </div>
+              <div class="back-bottom">ver más</div>
+            </div>
+          </div>
+        </div>
+        <div class="elem-4">
+          <div class="img-talento">
+            <img src="./img/g_img2.JPG" alt="">
+          </div>
+        </div>
+        <div class="elem-4">
+          <div class="img-talento">
+            <img src="./img/g_img3.JPG" alt="">
+          </div>
+        </div>
+        <div class="elem-4">
+          <div class="img-talento">
+            <img src="./img/g_img4.JPG" alt="">
+          </div>
+        </div>
+        <div class="elem-4">
+          <div class="img-talento">
+            <img src="./img/g_img5.JPG" alt="">
+          </div>
+        </div>
+        <div class="elem-4">
+          <div class="img-talento">
+            <img src="./img/g_img6.JPG" alt="">
+          </div>
+        </div>
+        <div class="elem-4">
+          <div class="img-talento">
+            <img src="./img/g_img7.JPG" alt="">
           </div>
         </div>
         
