--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
 
     <section class="seccion_carrusel">
       <div class="fila">
-        <div class="elem bkg-negr0">
-          <svg style="transform: scaleX(1.43) scaleY(1.2);" viewBox="0 0 50 33.85">
+        <div class="elem maxww">
+          <svg style="transform: scaleX(1.3) scaleY(1.2);" viewBox="0 0 50 33.85">
             <polygon points="41.8,33.8 0,33.8 0,0 50,0 "/>
           </svg>
           <div class="cont-c">
@@ -112,9 +112,7 @@
     </section>
 
     <section class="seccion_imagenes">
-      <div class="tit-sec">
-        Talentos
-      </div>
+      <div class="tit-sec">Talentos</div>
       <div class="cont-elems m-general">
         <div class="elem-4">
           <div class="img-talento">
@@ -124,8 +122,8 @@
         <div class="elem-4">
           <div class="img-talento">
             <img src="./img/modelo.JPG" alt="">
-            <div class="back-talento">
-              <div class="txt-tal-tit">Kristal Silva</div>
+            <div class="back-talento back-info">
+              <div class="txt-tal-tit">Kristal Silva</div> 
               <div class="txt-tal-qes">Actriz</div>
               <div>
                 <div class="back-redes fab fa-facebook-square"> <div>100K</div></div>
@@ -155,6 +153,17 @@
         <div class="elem-4">
           <div class="img-talento">
             <img src="./img/g_img5.JPG" alt="">
+            <div class="back-talento back-info">
+              <div class="txt-tal-tit">Bernardo Segura</div> 
+              <div class="txt-tal-qes">Actriz</div>
+              <div>
+                <div class="back-redes fab fa-facebook-square"> <div>100K</div></div>
+                <div class="back-redes fab fa-twitter-square"><div>60K</div></div>
+                <div class="back-redes fab fa-youtube-square"><div>230K</div></div>
+                <div class="back-redes fab fa-instagram-square"><div>110K</div></div>
+              </div>
+              <div class="back-bottom">ver más</div>
+            </div>
           </div>
         </div>
         <div class="elem-4">
@@ -167,12 +176,18 @@
             <img src="./img/g_img7.JPG" alt="">
           </div>
         </div>
+        <div class="elem-4">
+          <div class="img-talento">
+            <img src="./img/g_img8.JPG" alt="">
+          </div>
+        </div>
         
       </div>
 
     </section>
 
     <section class="seccion_contacto">
+      <div class="tit-sec">Contacto</div>
 
 
     </section>
@@ -227,7 +242,6 @@
 
     <div class="legales">2021 © TvAzteca</div>
   </footer>
-
 
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="js/vendor/e93ce6ba26.js"></script>
